# cann-ops

./: .gitignore  CMakeLists.txt  CMakePresets.json  OWNERS  QuickStart.md  README.en.md  README.md  SECURITYNOTE.md  build.sh  e -i HEAD~3  log  version.info
ops/math/AddCustom/: CMakeLists.txt
src/conv/conv3d_backprop_filter_v2/: CMakeLists.txt  README.md
src/conv/conv3d_backprop_filter_v2/docs/: Conv2DBackpropFilterV2.md  Conv3DBackpropFilterV2.md
src/conv/conv3d_backprop_filter_v2/op_host/: aclnn_convolution_backward.cpp  conv2d_backprop_input_util.h  conv2dtranspose_ub_cache_tiling.h  conv3_d_backprop_filter_v2.cpp  conv3_d_backprop_filter_v2_def.cpp  conv3d_backprop_filter_v2_tiling.h  conv3d_dw_v2_basic_block_tiling.cpp  conv3d_dw_v2_basic_block_tiling.h  matmul_util.h  reduce_sum_op.h
src/conv/conv3d_backprop_filter_v2/op_kernel/: conv3d_bp_filter.h  conv3d_bp_filter_config.h  conv3d_bp_filter_impl.h  conv3d_bp_filter_intf.h  conv_bp_func.h
src/expand/ExpandV2/examples/AclNNInvocationNaive/: CMakeLists.txt  main.cpp  run.sh
src/foreach/foreach_div_list/: CMakeLists.txt  README.md
src/foreach/foreach_div_list/docs/: aclnnForeachDivList.md
src/foreach/foreach_div_list/examples/AclNNInvocationNaive/: README.md  main.cpp
src/foreach/foreach_div_list/op_host/: foreach_div_list.cpp
src/foreach/foreach_div_list/op_kernel/: foreach_div_list.cpp
src/foreach/foreach_div_scalar/: CMakeLists.txt  README.md
src/foreach/foreach_div_scalar/docs/: aclnnForeachDivScalar.md
src/foreach/foreach_div_scalar/examples/AclNNInvocationNaive/: README.md  main.cpp
src/foreach/foreach_div_scalar/op_host/: foreach_div_scalar.cpp
src/foreach/foreach_div_scalar/op_kernel/: foreach_div_scalar.cpp
src/foreach/foreach_erfc/: CMakeLists.txt  README.md
src/foreach/foreach_erfc/docs/: aclnnForeachErfc.md
src/foreach/foreach_erfc/examples/AclNNInvocationNaive/: README.md
src/foreach/foreach_erfc/op_host/: foreach_erfc.cpp
src/foreach/foreach_erfc/op_kernel/: foreach_erfc.cpp
src/foreach/foreach_log10/: CMakeLists.txt  README.md
src/foreach/foreach_log10/docs/: aclnnForeachLog10.md
src/foreach/foreach_log10/examples/AclNNInvocationNaive/: README.md
src/foreach/foreach_log10/op_host/: foreach_log10.cpp
src/foreach/foreach_log10/op_kernel/: foreach_log10.cpp
src/foreach/foreach_reciprocal/: CMakeLists.txt  README.md
src/foreach/foreach_reciprocal/docs/: aclnnForeachReciprocal.md
src/foreach/foreach_reciprocal/examples/AclNNInvocationNaive/: README.md
src/foreach/foreach_reciprocal/op_host/: foreach_reciprocal.cpp
src/foreach/foreach_reciprocal/op_kernel/: foreach_reciprocal.cpp
src/foreach/foreach_round_off_number/: CMakeLists.txt  README.md
src/foreach/foreach_round_off_number/docs/: aclnnForeachRoundOffNumber.md
src/foreach/foreach_round_off_number/examples/AclNNInvocationNaive/: README.md
src/foreach/foreach_round_off_number/op_host/: foreach_round_off_number.cpp
src/foreach/foreach_round_off_number/op_kernel/: foreach_round_off_number.h
src/math/add_custom/: CMakeLists.txt  README.md
src/math/add_custom/docs/: AddCustom.md
src/math/add_custom/examples/ATBInvocation/: readme.md
src/math/add_custom/examples/ATBInvocation/AddOperationATBPlugin/: CMakeLists.txt  aclnn_add_operation.cpp  aclnn_add_operation.h  build.sh
src/math/add_custom/examples/ATBInvocation/AddOperationTest/: test_model
src/math/add_custom/examples/AclNNInvocationNaive/: CMakeLists.txt  README.md  gen_data.py  main.cpp  run.sh  verify_result.py
src/math/add_custom/examples/AclOfflineModel/: README.md  run.sh
src/math/add_custom/examples/AclOfflineModel/inc/: common.h  op_runner.h  operator_desc.h
src/math/add_custom/examples/AclOfflineModel/scripts/: gen_data.py  verify_result.py
src/math/add_custom/examples/AclOfflineModel/src/: CMakeLists.txt  common.cpp  main.cpp  op_runner.cpp  operator_desc.cpp
src/math/add_custom/examples/AclOnlineModel/: README.md  run.sh
src/math/add_custom/examples/AclOnlineModel/inc/: common.h  op_runner.h  operator_desc.h
src/math/add_custom/examples/AclOnlineModel/scripts/: gen_data.py  verify_result.py
src/math/add_custom/examples/AclOnlineModel/src/: CMakeLists.txt  common.cpp  main.cpp  op_runner.cpp  operator_desc.cpp
src/math/add_custom/examples/CppExtensions/: README.md
src/math/add_custom/examples/CppExtensions/jit/: extension_add.cpp  pytorch_npu_helper.hpp  run.sh
src/math/add_custom/examples/CppExtensions/load_library/: run.sh  (+2 more)
src/math/add_custom/examples/PytorchInvocation/: README.md  run_op_plugin.sh  test_ops_custom.py  test_ops_custom_register_in_graph.py
src/math/add_custom/framework/: CMakeLists.txt
src/math/add_custom/framework/tf_plugin/: CMakeLists.txt  tensorflow_add_custom_plugin.cc
src/math/add_custom/op_host/: CMakeLists.txt  add_custom.cpp  add_custom_tiling.h
src/math/add_custom/op_kernel/: CMakeLists.txt  add_custom.cpp
src/math/add_custom/tests/st/: README.md  test_add_custom.py
src/math/mul_sigmoid/graph/: CMakeLists.txt
src/math/mul_sigmoid/graph/src/: fuse_mul_sigmoid_pass.cpp
src/math/sqrt/: CMakeLists.txt  README.md
src/math/sqrt/docs/: Sqrt.md
src/math/sqrt/examples/AclNNInvocation/: README.md  run.sh
src/math/sqrt/examples/AclNNInvocationNaive/: CMakeLists.txt  README.md  gen_data.py  main.cpp  run.sh  verify_result.py
src/math/sqrt/framework/tf_plugin/: tensorflow_sqrt_plugin.cc
src/math/sqrt/op_host/: sqrt.cpp  sqrt_tiling.h
src/math/sqrt/op_kernel/: sqrt.cpp
src/math/sqrt/tests/st/: README.md  test_sqrt.py
src/matmul/gemm_v2/: CMakeLists.txt
src/matmul/gemm_v2/op_kernel/: mat_mul_v3_common.h
src/objdetect/edge32_c3_sum/: CMakeLists.txt  README.md
src/objdetect/edge32_c3_sum/docs/: Edge32C3Sum.md
src/objdetect/edge32_c3_sum/examples/AclNNInvocationNaive/: CMakeLists.txt  README.md  gen_data.py  main.cpp  run.sh
src/objdetect/edge32_c3_sum/framework/tf_plugin/: tensorflow_edge32_c3_sum_plugin.cc
src/objdetect/edge32_c3_sum/op_host/: edge32_c3_sum.cpp  edge32_c3_sum_tiling.h
src/objdetect/edge32_c3_sum/op_kernel/: edge32_c3_sum.cpp
(+2145 files in other folders)
